name:                MachineLearningStudy
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/MachineLearningStudy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Week1.CostFunction
                     , Week2.MoreCostFunction
                     , Week3.LogisticRegression
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , matrix
                     , random
  default-language:    Haskell2010

executable MachineLearningStudy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MachineLearningStudy
  default-language:    Haskell2010

test-suite MachineLearningStudy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , MachineLearningStudy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/MachineLearningStudy
